fix(gtk): fix alignment issues with nautilus sidebar

--- a/gtk-4.0/gtk-dark.css
+++ b/gtk-4.0/gtk-dark.css
@@ -4149,16 +4149,9 @@ placessidebar {
       border-radius: 0; }
       placessidebar row.sidebar-row label {
         color: #F4F5F6;
-        padding-left: 8px; }
-      placessidebar row.sidebar-row.sidebar-row .sidebar-icon {
-        margin-left: -14px;
-        margin-right: 12px;
-        padding-left: 14px;
-        padding-right: 12px;
-        color: #F4F5F6; }
+        padding-left: 30px; }
       placessidebar row.sidebar-row:hover {
         transition: all 300ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
-        color: rgba(0, 0, 0, 0.76);
         background-color: transparent;
         /*rgba(65,67,75,0.4); */
         background-image: linear-gradient(to right, #1b232d 40px, #191a1f 40px, #191a1f 97%); }
