--- a/gtk-4.0/widgets/_sidebar.scss
+++ b/gtk-4.0/widgets/_sidebar.scss
@@ -131,20 +131,11 @@ placessidebar {
 
       label {
         color: $fg_color;
-        padding-left: 8px;
+        padding-left: 30px;
       }
-      &.sidebar-row{
-        .sidebar-icon {
-          margin-left:-14px;
-          margin-right: 12px;
-          padding-left: 14px;
-          padding-right: 12px;
-          color: $fg_color;
-        }
-      }
+
       &:hover{
         transition: all 300ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
-        color: rgba(0,0,0,0.76);
         background-color: transparent; /*rgba(65,67,75,0.4); */
         background-image:linear-gradient(to right, lighten(#171e27, 2%) 40px, lighten($_sidebar_color, 5%) 40px, lighten($_sidebar_color, 5%) 97%);
       }
